fix: overflow bug

--- a/wiki/public/scss/general.scss
+++ b/wiki/public/scss/general.scss
@@ -57,6 +57,7 @@
 .main-column {
   background-color: var(--background-color);
   padding: 0px 50px;
+  margin: auto;
 
   @include media-breakpoint-down(md) {
     padding: 20px;
